# bossfx-sma-bot_

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bossfx/analytics/: metrics.py
bossfx/backtest/: engine.py  execution_sim.py  grid_search.py  walkforward.py
bossfx/config/: settings.py
bossfx/core/: events.py  interfaces.py  portfolio.py
bossfx/data/: csv_feed.py  yfinance_feed.py
bossfx/risk/: risk_manager.py
bossfx/strategies/: indicators.py  sma_crossover.py
bossfx/strategies/filters/: trend.py  volatility.py
bossfx/utils/: logger.py
configs/: eurusd_5y_baseline.yaml  eurusd_5y_trend.yaml  eurusd_5y_trend_vol.yaml  eurusd_5y_vol.yaml  eurusd_real_daily.yaml  eurusd_real_daily_trend.yaml  eurusd_sma_default.yaml  walkforward_1h.yaml  walkforward_5y.yaml  walkforward_eurusd_1h.yaml
scripts/: run_backtest.py  run_walkforward.py
tests/: test_config.py  test_engine_e2e.py  test_events.py  test_execution.py  test_indicators.py  test_portfolio.py  test_risk.py  test_strategy.py  test_trend_filter.py  test_volatility_filter.py  test_walkforward.py
tests/fixtures/: eurusd_1h_sample.csv
