[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bossfx"
version = "0.1.0"
description = "BossFx — modular algorithmic trading framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "BossFx" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bossfx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
